[gd_scene load_steps=9 format=3 uid="uid://c8cywrb5tgm6k"]

[ext_resource type="Script" path="res://examples/sot_like/player/sot_like_player.gd" id="1_68dqe"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/interactables/nodes/3d/interaction_raycast_3d.gd" id="2_3wm4b"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/equipped_item_3d.gd" id="3_eihw1"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/interactables/nodes/interaction_manager.gd" id="3_qgbfi"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/equipment.gd" id="5_cwv7t"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/inventory.gd" id="6_n2esb"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/radial_menu_container.gd" id="7_3hmpf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b0i2f"]

[node name="sot_like_player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_68dqe")

[node name="CameraNeck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.663021, 0.320864)

[node name="Camera3D" type="Camera3D" parent="CameraNeck"]
current = true
fov = 78.0

[node name="InteractionRayCast3D" type="RayCast3D" parent="CameraNeck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.197257)
target_position = Vector3(2.08165e-12, 2.08165e-12, -2)
collision_mask = 24
collide_with_areas = true
script = ExtResource("2_3wm4b")
interaction_manager_path = NodePath("../../../InteractionManager")

[node name="RightEquippedItem" type="Node3D" parent="CameraNeck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.283517, -1.08995)
script = ExtResource("3_eihw1")
equipment_path = NodePath("../../../Equipment")
tags_to_display = Array[String](["equipped.center"])

[node name="CenterEquippedItem" type="Node3D" parent="CameraNeck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.283517, -1.08995)
script = ExtResource("3_eihw1")
equipment_path = NodePath("../../../Equipment")
tags_to_display = Array[String](["equipped.right"])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_b0i2f")

[node name="InteractionManager" type="Node" parent="."]
script = ExtResource("3_qgbfi")
interacting_owner_path = NodePath("..")
interaction_raycast_path = NodePath("../CameraNeck/Camera3D/InteractionRayCast3D")
tags_blocking_interaction = Array[String](["dead", "dragging", "sailing"])

[node name="Equipment" type="Node" parent="."]
script = ExtResource("5_cwv7t")
owner_path = NodePath("..")
inventory_path = NodePath("../Inventory")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("6_n2esb")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionExplanation" type="CenterContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="ExplanationLabel" type="Label" parent="BoxContainer/InteractionExplanation"]
layout_mode = 2

[node name="RadialMenuContainer" type="Container" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 32.0
offset_right = -42.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("7_3hmpf")

[node name="Button" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button2" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button3" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button4" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button5" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button6" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button7" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"

[node name="Button8" type="Button" parent="RadialMenuContainer"]
layout_mode = 2
text = "test item"
